# traur

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
contrib/: makepkg-traur
data/: patterns.toml
pkg/: PKGBUILD
src/: coordinator.rs  main.rs
src/features/checksum_analysis/: mod.rs
src/features/gtfobins_analysis/: mod.rs
src/features/install_script_analysis/: mod.rs
src/features/orphan_takeover_analysis/: CLAUDE.md
src/features/pkgbuild_analysis/: mod.rs
src/shared/: aur_comments.rs  aur_fetch.rs  aur_git.rs  bulk.rs  config.rs  malicious_list.rs  mod.rs  models.rs  output.rs  scoring.rs  signal_registry.rs  text.rs
tests/: feature_tests.rs  output_tests.rs
