[package]
name = "traur"
version = "0.5.0"
edition = "2024"
description = "Findings-based security scanner for AUR PKGBUILDs"
license = "MIT"

[[bin]]
name = "traur"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
colored = "2"
strsim = "0.11"
rayon = "1.10"
indicatif = "0.17"
